2014-06-21 : Forum posts are now submitted to Turnitin when posted
2014-06-21 : Code changes as required by Moodlerooms to better fit Moodle guidelines
2014-06-21 : Peermark Manager now accessible to any instructor in PP
2014-06-21 : Extra permission checks added for migration tool
2014-06-21 : Improved CSS to scope only to plugins
2014-06-21 : Added css files to jQuery plugin organisation
2014-06-21 : User creation removed from restore procedure
2014-06-21 : Additonal indexes added to database tables
2014-06-21 : Bug fixed where user could submit without accepting Moodle disclaimer
2014-06-21 : Postgres bug fixed when searching unlinked users table
2014-06-21 : Bug fixed where a grade set to 0 in GradeMark was showing as — in Turnitin Assignment
2014-06-21 : Course reset functionality added to remove Turnitin data when a class/module is reset.
2014-06-21 : Config warning added if plugin has not been configured.
2014-06-21 : Removed restriction in PP to allow submissions after the due date.
2014-06-21 : Removed restriction on word count and content length if accepting any file type
2014-06-21 : Ability added to enable/disable Turnitin in individual modules.
2014-06-21 : Anonymous marking option is locked once a submission is made to any assignment part
2014-06-21 : Automatic connection test and upgrade check in settings stopped and changed to buttons
2014-06-21 : Bug fixed where new files with same filename displaying correct OR link
2014-06-21 : Check for XMLWriter extension added to settings area
2014-06-21 : Bug fixed with Allow Non OR file type setting not being changed in Turnitin.
2014-06-21 : Version file updated for Moodle 2.7+ compatibility
2014-06-21 : Javascript reorganised to fit better with Moodle guidelines
2014-06-21 : Font Awesome added to plugin
2014-06-21 : Javascript cleaned up in block to use Moodle value
2014-06-21 : EULA closing reworked to accomodate IE